# nxp-pcf8523

./: CHANGELOG.md  Cargo.toml  README.md
src/: bits.rs  datetime.rs  driver.rs  lib.rs  registers.rs  typedefs.rs
tests/: mod.rs
